...
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="workout"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cxu-fY-zAD">
                                        <rect key="frame" x="183.5" y="188" width="47" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        <rect key="frame" x="167" y="317" width="80" height="41"/>
                                        <color key="backgroundColor" red="0.34665884047777518" green="0.40695872097225894" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="logout"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="30I-u0-V4c"/>
...
                    <tabBarItem key="tabBarItem" title="Meals" image="restaurant-outline 2" selectedImage="restaurant-outline 3" id="Y4a-he-oF3">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="meals"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
                    <tabBarItem key="tabBarItem" title="Profile" image="person-outline 2" selectedImage="person-outline 3" id="HIw-d4-VBu">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="profile"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
        <scene sceneID="hPw-vM-OKZ">
            <objects>
                <viewController storyboardIdentifier="login" useStoryboardIdentifierAsRestorationIdentifier="YES" id="PLk-AP-NPd" customClass="LoginViewController" customModule="GetFit" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="RtP-fV-7le">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="llX-KV-Jxf">
                                <rect key="frame" x="47" y="400" width="320" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
...
                                <rect key="frame" x="157" y="455" width="100" height="50"/>
                                <color key="backgroundColor" red="0.27058823529999998" green="0.28627450980000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginbtn"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="hj4-XA-G8e"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.98431372549999996" green="1" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                <rect key="frame" x="164.5" y="544" width="85" height="41"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="signup"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Signup?">
                                    <color key="titleColor" red="0.1843137255" green="0.18039215689999999" blue="0.25490196079999999" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                    <navigationItem key="navigationItem" id="nZ0-kp-ONo"/>
                    <connections>
                        <outlet property="email" destination="wzf-hz-zPb" id="52q-ac-B1T"/>
                        <outlet property="errorLabel" destination="Rv0-vx-vw4" id="qxq-CH-E0F"/>
                        <outlet property="loginButton" destination="cqU-2m-Js1" id="rio-i1-lo5"/>
                        <outlet property="loginButtonLabel" destination="cqU-2m-Js1" id="5kc-Rs-umj"/>
                        <outlet property="loginLabel" destination="7b2-Ya-KaC" id="KKf-kZ-erv"/>
                        <outlet property="password" destination="llX-KV-Jxf" id="vq6-XC-mNh"/>
                        <outlet property="signUpButton" destination="aF1-4O-4Do" id="Oag-ld-whP"/>
                    </connections>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="dH9-da-l30">
                                <rect key="frame" x="47" y="324.5" width="320" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="secondname"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="BNM-Hp-vgp"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="mYB-I9-Fap">
                                <rect key="frame" x="47" y="279.5" width="320" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstname"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="KDX-RQ-qDI"/>
...
                                <rect key="frame" x="157" y="469.5" width="100" height="50"/>
